# llama.cpp-android-java

.github/workflows/: build-apk.yml  main.yml
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
github/workflows/: build-apk.yml
llama/src/main/cpp/: CMakeLists.txt
llama/src/main/java/android/llama/cpp/: LLamaAndroid.kt
